Solve alignment issue in characteristics section by using grid and flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ a {
 
 .meta_characteristics {
     height: 500px;
-    background-image: url(../images/hero_image_02.jpg);
+    background-image: url(../images/Palmtree_bathtub_metaverse.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -179,21 +179,24 @@ a {
 
 }
 
-.meta_characteristics>div {
-    background-color: rgba(255, 255, 255, .6);
+.character_item {
+    background-color: rgba(255, 255, 255, .8);
     color: #000;
-    border: 2px solid white;
+    border: 2px solid #fff;
     box-sizing: border-box;
 
-    align-self: stretch;
-}
-
-.meta_characteristics h2,p {
     text-align: center;
-    align-self: center;
-
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
+.character_item > p {
+    min-height: 20px;
+    max-height: 60px;
+}
 /* books page */
 
 #books_heroimage {
